--- a/_twig/docker-compose.yml/application.yml.twig
+++ b/_twig/docker-compose.yml/application.yml.twig
@@ -1,15 +1,15 @@
-{% set syncvolume = false %}
-{% if @('host.os') == 'darwin' and @('mutagen') == 'yes' %}
-{% set syncvolume = true %}
-{% endif %}
 
   node:
     build:
       context: ./
       dockerfile: .my127ws/docker/image/node/Dockerfile
-{% if @('app.build') == 'dynamic' %}
+{% if @('app.dynamic') == 'yes' %}
     volumes:
-      - {{ (syncvolume) ? @('workspace.name') ~ '-sync:/app:nocopy' : ('./:/app' ~ @('docker.compose.host_volume_options')) }}
+{% if @('docker-compose.sync.strategy') == 'mutagen' %}
+      - {{ @('workspace.name') ~ '-sync:/app:nocopy' }}
+{% else %}
+      - ./:/app:{{ @('docker-compose.sync.native.options') }}
+{% endif %}
       - ./.my127ws/application:/home/node/application
       - ./.my127ws/docker/image/node/root/lib/task:/lib/task
       - ./.my127ws:/.my127ws
@@ -17,27 +17,27 @@
       - traefik.enable=true
       - traefik.docker.network=my127ws
       - traefik.gateway.backend={{ 'gateway-' ~ @('workspace.name') }}
-      - traefik.gateway.frontend.rule=Host:{{ @('app.gateway.environment.APP_HOST') }}
-      - traefik.gateway.port={{ @('app.gateway.docker.port')}}
+      - traefik.gateway.frontend.rule=Host:{{ @('app.gateway.environment.GATEWAY_HOST') }}
+      - traefik.gateway.port={{ @('app.gateway.port')}}
       - traefik.client.backend={{ 'client-' ~ @('workspace.name') }}
-      - traefik.client.frontend.rule=Host:{{ @('app.client.environment.APP_HOST') }}
-      - traefik.client.port={{ @('app.client.docker.port')}}
+      - traefik.client.frontend.rule=Host:{{ @('app.client.environment.CLIENT_HOST') }}
+      - traefik.client.port={{ @('app.client.port')}}
     networks:
       private: {}
       shared: {}
 {% else %}
     image: {{ @('docker.repository') ~ ':' ~ @('app.version') }}
     expose:
-      - {{ @('app.gateway.docker.port')}}
-      - {{ @('app.client.docker.port') }}
+      - {{ @('app.gateway.port')}}
+      - {{ @('app.client.port') }}
     labels:
       - traefik.enable=false
     networks:
       - private
 {% endif %}
     environment: {{ to_nice_yaml(deep_merge([
-        @('app._common.environment'),
-        @('app._common.environment_secrets'),
+        @('app.environment'),
+        @('app.environment_secrets'),
         @('app.gateway.environment'),
         @('app.client.environment')
       ]), 2, 6) | raw }}
