misc: restructuring viper/base attributes

--- a/docker/image/node/Dockerfile.twig
+++ b/docker/image/node/Dockerfile.twig
@@ -1,4 +1,4 @@
-FROM {{ @('app.image') }} as node
+FROM {{ @('app.build.from') }} as node
 
 RUN echo 'APT::Install-Recommends 0;' >> /etc/apt/apt.conf.d/01norecommends \
  && echo 'APT::Install-Suggests 0;' >> /etc/apt/apt.conf.d/01norecommends \
