--- a/_twig/docker-compose.yml/application.yml.twig
+++ b/_twig/docker-compose.yml/application.yml.twig
@@ -17,10 +17,10 @@
       - traefik.enable=true
       - traefik.docker.network=my127ws
       - traefik.gateway.backend={{ 'gateway-' ~ @('workspace.name') }}
-      - traefik.gateway.frontend.rule=Host:{{ @('app.gateway.ingress.hosts[0]') }}
+      - traefik.gateway.frontend.rule=Host:{{ @('app.gateway.ingress.hosts.0') }}
       - traefik.gateway.port={{ @('app.gateway.port')}}
       - traefik.client.backend={{ 'client-' ~ @('workspace.name') }}
-      - traefik.client.frontend.rule=Host:{{ @('app.client.ingress.hosts[0]') }}
+      - traefik.client.frontend.rule=Host:{{ @('app.client.ingress.hosts.0') }}
       - traefik.client.port={{ @('app.client.port')}}
     networks:
       private: {}
@@ -36,8 +36,10 @@
       - private
 {% endif %}
     environment: {{ to_nice_yaml(deep_merge([
-        @('app.environment'),
-        @('app.environment_secrets'),
-        @('app.gateway.environment'),
-        @('app.client.environment')
+        {
+          'HOST_OS_FAMILY': @('host.os')
+        },
+        @('app.env'),
+        @('app.gateway.env'),
+        @('app.client.env')
       ]), 2, 6) | raw }}
