--- a/application/overlay/app/client/config/default.js.twig
+++ b/application/overlay/app/client/config/default.js.twig
@@ -1,6 +1,6 @@
 export default {
   gateway: {
-    csr: 'https://{{ @('app.gateway.environment.APP_HOST') }}/graphql',
-    ssr: 'http://localhost:4000/graphql'
+    csr: 'https://{{ @('app.gateway.env.GATEWAY_HOST') }}/graphql',
+    ssr: process.env.GATEWAY_SSR_URL
   }
 };
