viper fix autostarting of client/gateway in preview/production

--- a/helm/app/values-production.yaml.twig
+++ b/helm/app/values-production.yaml.twig
@@ -1,2 +1,2 @@
 
-app: {{ to_nice_yaml(@('environment.production'), 2, 2) | raw }}  
+app: {{ to_nice_yaml(@('environment.production.app'), 2, 2) | raw }}
