--- a/application/skeleton/package.json.twig
+++ b/application/skeleton/package.json.twig
@@ -7,7 +7,8 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/@{{ @('workspace.name')|lower }}/*"
+      "**/@{{ @('workspace.name')|lower }}/*",
+      "**/@inviqa/viper-*"
     ]
   },
   "devDependencies": {
