--- a/application/skeleton/app/client/package.json.twig
+++ b/application/skeleton/app/client/package.json.twig
@@ -46,6 +46,7 @@
     "@storybook/react": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
+    "@testing-library/react-hooks": "^3.4.1",
     "@testing-library/user-event": "^12.1.1",
     "@types/dompurify": "^2.0.4",
     "@types/jest": "^26.0.7",
