--- a/docker/image/node/root/etc/supervisor/conf.d/client.conf.twig
+++ b/docker/image/node/root/etc/supervisor/conf.d/client.conf.twig
@@ -1,11 +1,15 @@
 [program:client]
-directory=/app/app/client
+directory=/app
+stopasgroup=true
+killasgroup=true
+stopsignal=TERM
 {% if @('app.dynamic') == 'yes' %}
-command=node ./node_modules/.bin/next dev
+command=yarn workspace @inviqa/viper-app-client dev
 {% else %}
-command=node ./node_modules/.bin/next start
+command=yarn workspace @inviqa/viper-app-client start
 {% endif %}
 user=node
+environment=HOME="/home/node",USER="node"
 autostart=%(ENV_SUPERVISOR_START_CLIENT)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
