Use semi-colon in app image name

--- a/_twig/docker-compose.yml/application.yml.twig
+++ b/_twig/docker-compose.yml/application.yml.twig
@@ -14,7 +14,7 @@
       - ./.my127ws/docker/image/node/root/lib/task:/lib/task
       - ./.my127ws:/.my127ws
 {% else %}
-    image: {{ @('docker.repository') ~ @('app.version') }}
+    image: {{ @('app.image') }}
 {% endif %}
     labels:
       - traefik.enable=true
