--- a/application/overlay/Jenkinsfile.twig
+++ b/application/overlay/Jenkinsfile.twig
@@ -19,28 +19,28 @@ pipeline {
                 stage('helm kubeval qa')  { steps { sh 'ws helm kubeval qa' } }
             }
         }
-{% if @('pipeline.publish.enabled') == 'yes' %}
+{% if @('pipeline.stage.publish.enabled') == 'yes' %}
         stage('Publish') {
             when { not { triggeredBy 'TimerTrigger' } }
             steps { 
                 milestone(50)
                 sh 'ws app publish'
-{% if @('pipeline.publish.chart.enabled') %}
+{% if @('pipeline.stage.publish.chart.enabled') %}
                 sh 'ws app publish chart "${GIT_BRANCH}" "{{ @('workspace.name') }} build artifact ${GIT_COMMIT}"'
 {% endif %}
             }
         }
 {% endif %}
-{% if @('pipeline.qa.enabled') == 'yes' %}
+{% if @('pipeline.stage.qa.enabled') == 'yes' %}
         stage('Deploy (QA)') {
             environment {
-{% for key, value in @('pipeline.qa.environment') %}
+{% for key, value in @('pipeline.stage.qa.environment') %}
                 {{ key }} = {{ value|raw }}
 {% endfor %}
             }
             when {
                 not { triggeredBy 'TimerTrigger' }
-                branch '{{ @('pipeline.qa.branch') }}'
+                branch '{{ @('pipeline.stage.qa.branch') }}'
             }
             steps {
                 milestone(100)
